[package]
name = "icesl2voxel"
version = "0.1.0"
authors = ["Vincent Tavernier <vince.tavernier@gmail.com>"]
edition = "2018"

[dependencies]
failure = "0.1"
structopt = { version = "0.3", features = [ "paw" ] }
paw = "1"
xml-rs = "0.8"
regex = "1.3"
lazy_static = "1.4"
serde = "1"
serde_derive = "1"
serde_yaml = "0.8"
base64 = "0.12"
libflate = "0.1"
ndarray = { version = "0.13", features = [ "serde", "rayon" ] }
hdf5 = "0.6"
log = "0.4"
env_logger = "0.7"
stl_io = "0.4.2"
gcode = "0.6"
itertools = "0.9"
bytesize = "1.0"
line_drawing = "0.8"
num-traits = "0.2"
nalgebra = "0.21"
