[package]
name = "phasor"
version = "0.1.0"
authors = ["Vincent Tavernier <vince.tavernier@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
tinygl = { path = "../tinygl" }
log = "0.4.8"
glutin = "0.23.0"
env_logger = "0.7.1"
bytesize = "1.0.0"

[build-dependencies]
bindgen = "0.53.1"
tinygl-compiler = { path = "../tinygl-compiler" }
