[package]
name = "tinygl"
version = "0.1.0"
authors = ["Vincent Tavernier <vincent.tavernier@inria.fr>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
glow = { git = "https://github.com/grovesNL/glow.git" }
cgmath = "0.17.0"
log = "0.4.8"
env_logger = "0.7.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
glutin = "0.23.0"

[target.wasm32-unknown-unknown.dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
web-sys = { version = "0.3", features = ["Node", "Document", "HtmlElement"] }

[build-dependencies]
gl_generator = "0.14.0"
